v2.13.1 - xx xxx xxxx
---------------------

v2.13.0 - 14 Feb 2020
---------------------
   - OVN:
     * OVN has been removed from this repository. It now exists as a
       separate project. You can find it at
       https://github.com/ovn-org/ovn.git
   - Userspace datapath:
     * Add option to enable, disable and query TCP sequence checking in
       conntrack.
     * Add support for conntrack zone limits.
     * Command "ovs-appctl dpctl/dump-flows" refactored to show subtable
       miniflow bits for userspace datapath.
   - AF_XDP:
     * New option 'use-need-wakeup' for netdev-afxdp to control enabling
       of corresponding 'need_wakeup' flag in AF_XDP rings.  Enabled by default
       if supported by libbpf.
     * 'xdpmode' option for netdev-afxdp renamed to 'xdp-mode'.
       Modes also updated.  New values:
         native-with-zerocopy  - former DRV
         native                - new one, DRV without zero-copy
         generic               - former SKB
         best-effort [default] - new one, chooses the best available from
                                 3 above modes
   - DPDK:
     * DPDK pdump packet capture support disabled by default. New configure
       option '--enable-dpdk-pdump' to enable it.
     * DPDK pdump support is deprecated and will be removed in next releases.
     * DPDK ring ports (dpdkr) are deprecated and will be removed in next
       releases.
     * Add support for DPDK 19.11.
     * Add hardware offload support for output, drop, set of MAC, IPv4 and
       TCP/UDP ports actions (experimental).
     * Add experimental support for TSO.
   - RSTP:
     * The rstp_statistics column in Port table will only be updated every
       stats-update-interval configured in Open_vSwitch table.
   - OVSDB:
     * When ovsdb-server is running in backup mode, the default value of probe
       interval is increased to 60 seconds for the connection to the
       replication server. This value is configurable with the unixctl