@@ -1,5 +1,7 @@
 v2.13.1 - xx xxx xxxx
 ---------------------
+   - OpenFlow:
+     * New action "delete_field".
 
 v2.13.0 - 14 Feb 2020
 ---------------------
